--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -13,7 +13,7 @@
     z-index: 100;
   
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
   
     position: fixed;
